<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="30dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/gambar_event"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/title_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/gambar_event"
            android:layout_toRightOf="@id/gambar_event"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_semibold"
            tools:text="@string/title_name" />

        <TextView
            android:id="@+id/loc_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_name"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/gambar_event"
            android:layout_toRightOf="@id/gambar_event"
            android:drawableLeft="@drawable/baseline_location_on_24"
            android:drawablePadding="6dp"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_semibold"
            tools:text="@string/loc_name" />

        <TextView
            android:id="@+id/date_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loc_name"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/gambar_event"
            android:layout_toRightOf="@id/gambar_event"
            android:drawableLeft="@drawable/baseline_calendar_month_24"
            android:drawablePadding="6dp"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_semibold"
            tools:text="@string/date_name" />

        <TextView
            android:id="@+id/idr_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_name"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/gambar_event"
            android:layout_toRightOf="@id/gambar_event"
            android:drawableLeft="@drawable/baseline_payment_24"
            android:drawablePadding="6dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_semibold"
            tools:text="@string/idr_name" />

        <Button
            android:id="@+id/detail_name"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/gambar_event"
            android:text="@string/button_event"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_semibold"
            android:background="@drawable/button_bg3"/>

        <!--        <TextView-->
        <!--            android:id="@+id/tv_item_description"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_below="@id/tv_item_name"-->
        <!--            android:layout_marginLeft="16dp"-->
        <!--            android:layout_marginRight="16dp"-->
        <!--            android:layout_toEndOf="@id/img_item_photo"-->
        <!--            android:layout_toRightOf="@id/img_item_photo"-->
        <!--            android:ellipsize="end"-->
        <!--            android:maxLines="5"-->
        <!--            tools:text="@string/description" />-->
    </RelativeLayout>

</androidx.cardview.widget.CardView>