<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Daftar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:background="@drawable/bg_login_regis">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Daftar"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="50dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_semibold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nama Lengkap"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="10dp"
        android:textSize="14dp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_semibold"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_regular"
        android:textSize="14dp"
        android:hint="@string/nama"
        android:background="@drawable/insert_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="E-Mail"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="10dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_semibold"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14dp"
            android:hint="@string/email"
            android:background="@drawable/insert_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nomor Telepon"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="10dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_semibold"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14dp"
            android:hint="@string/telepon"
            android:background="@drawable/insert_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kata Sandi"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="10dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_semibold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtpassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:passwordToggleEnabled="true"
            android:textSize="14dp"
            app:passwordToggleTint="@color/purple"
            android:fontFamily="@font/poppins_regular"
            app:hintEnabled="false"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/insert_text"
                android:hint="@string/password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Konfirmasi Kata Sandi"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="10dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_semibold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/konfirmasikatasandi"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:passwordToggleEnabled="true"
            android:textSize="14dp"
            app:passwordToggleTint="@color/purple"
            android:fontFamily="@font/poppins_regular"
            app:hintEnabled="false"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/insert_text"
                android:hint="@string/konfirm_sandi"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/daftar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Daftar"
            android:onClick="sendMessage"
            app:backgroundTint="@null"
            android:textSize="18dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_bg"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/poppins_regular"
                android:text="Sudah punya akun ?"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="Masuk"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>